--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zheng wee's site </title>
+
+
 </head>
 
-<body>
+<link rel="stylesheet" href="style.css">
+
+<body >
     <table border="0">
         <tr>
-            <td><img src="wee.jpg" alt=""></td>
+            <td><img class="photo" src="wee.png" alt="" ></td>
 
             <td>
 
 
-                <h1> <em> Zheng <strong>
+                <h1  > <em> Zheng <strong> 
                             <font color=red> Wee </font>
                         </strong>
                 </h1>
@@ -35,9 +40,9 @@
 
         <li>Blue cheese</li>
     </ul>
-    <ol type="i" start="8"> This is a OL
-        <li>Feta</li>
-        <li> aa</li>
+    <ol type="i" start="1"> This is a OL
+        <li>Figma</li>
+        <li>Google</li>
     </ol>
 
     <menu> THIS IS A MENU
